--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.6.5",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^1.8.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10"
   }
